--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="cright">
-	<h2 style="font-family: 'Times New Roman;font-style: oblique">Welcome to Sanju Star TV</h2><br>
+	<!-- <h2 style="font-family: 'Times New Roman;font-style: oblique">Welcome to Sanju Star TV</h2><br> -->
 	<!--<%= image_tag('doc.jpg') %>-->
 
 		<p>Sanju cable Networks is one of the largest Cable distribution company with a strong emphasis on quality of service and content. This has enabled us to cater to hundreds of subscribers who are spread across Bangalore in a very short span of time. With fiber optic backbone across its networks and state-of-the-art distribution set ups, we bring the digital age through Cable transforming the way viewers receive information and entertainment.</p><br>
