--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-fixed-bottom">
+<!-- <nav class="navbar navbar-inverse navbar-fixed-bottom">
 	<div id="footer">
 		<div class="left">
 			Copyright &copy; by <a href="#"> SYST Technologies</a>
@@ -11,3 +11,4 @@
 		</div>
 	</div>	
 </nav>
+ -->
