--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar">
+<!-- <div class="navbar">
  	<div id="header">
  		<h1 class="h1"><strong>Sanju Star TV<span class="h1"></span></strong></h1>
  	</div>
@@ -26,7 +26,7 @@
 	      </ul>
      </div>
 </div>
-
+ -->
 
 
 
