--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,11 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<body class="devise">
+	<div class="forgot_password">
+	<h2 style="color: #534292">Forgot your password?</h2><br>
+	<%= devise_error_messages! %>
+		<%= bootstrap_form_for(resource, as: resource_name, url: password_path(resource_name)) do |f| %>
+		    <%= f.email_field :email, placeholder: "Email address", hide_label: true %>
+		    <%= f.submit 'Send me reset password instructions',class: "btn btn-primary btn-lg btn-block" %>
+		<% end %>
+	<%= render "devise/shared/links" %>
+	</div>
+</body>
