--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,25 +1,38 @@
-<h2> Payment </h2><br>
+<div style="position: relative;">
+	<h1>Payments List</h1>
+	<div style="position: absolute; right: 0; top: 0; text-align: right; max-width: 50%; overflow: hidden">
+		<%= search_form_for @q do |f| %>
+			<%= f.label :search %>
+ 			<%= f.search_field :customer_first_name_or_customer_customer_friendly_id_cont,placeholder: "Name or Id" %>
+ 			<%= f.submit %>
+		<% end %>
+	</div>
+</div>
+<br>
+
 <table class="table table-striped table-bordered">
-	<tr>
+	<tr class="info">
 		<th></th>
-		<th>Name</th>
-		<th>Payment Month</th>
-		<th>Status</th>
+		<th><%= sort_link(@q, :customer_friendly_id, 'Customer Id', default_order: :desc) %></th>
+		<th><%= sort_link(@q, :customer_first_name, 'Name', default_order: :desc) %></th>
+		<th><%= sort_link(@q, :payment_date, 'Payment Month', default_order: :desc) %></th>
+		<th><%= sort_link(@q, :status, 'Status', default_order: :desc) %></th>
+		<th></th>
 	</tr>
-	<% @payment.each_with_index do |payment,index|  %>
-	<tr>
-		<td><%= index + 1%></td>
-		<td><%= payment.customer.first_name %></td>
-		<td><%= payment.payment_date.strftime("%B, %Y ") %></td>
-		<td><%= payment.status %></td>
-	</tr>
+	<% @payments.each_with_index do |payment,index| %>
+		<tr>
+			<td><%= index + 1%></td>
+			<td><%= payment.customer.customer_friendly_id %></td>
+			<td><%= payment.customer.first_name %></td>
+			<td><%= payment.payment_date.strftime("%B, %Y ") %></td>
+			<td><%= payment.status %></td>
+			<td><%= link_to 'Edit', edit_payment_path(payment) %></td>
+		</tr>
 	<% end %>
-</table>
+</table> 
 
-<%= will_paginate @payment %>
+<%= will_paginate @payment_customers %>
 
-
-<%= button_to('Add payment', new_payment_path, :class => 'btn btn-large btn-primary',:method => :get)  %><br>
 
 
 
