--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,13 @@
-<h2>Change your password</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
+<body class="devise">
+  <div class="forgot_password">
+    <h2 style="color: #534292">Change your password</h2>
+      <%= devise_error_messages! %>
+      <%= bootstrap_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put })do |f| %>
+          <%= f.hidden_field :reset_password_token %>
+          <%= f.password_field :password, placeholder: "New password",placeholder: "Password 8 characters minimum",hide_label: true,icon: "lock" %>
+          <%= f.password_field :password_confirmation, placeholder: "Confirm new password", hide_label: true, icon: "lock"%>
+          <%= f.submit 'Change my password',class: "btn btn-primary btn-lg btn-block" %>
+      <% end %>
 <%= render "devise/shared/links" %>
+</div>
+</body>
