--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,13 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<body class="devise">
+  <div class="sign_in">
+    <h2 style="color: #534292">Sign up</h2><br>
+      <%= devise_error_messages! %>
+      <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+              <%= f.email_field :email, placeholder: "Email address", hide_label: true, icon: "user" %>
+              <%= f.password_field :password, placeholder: "Password 8 characters minimum", hide_label: true, icon: "lock"%>
+              <%= f.password_field :password_confirmation, placeholder: "Password confirmation", hide_label: true, icon: "lock"%>
+              <%= f.submit 'Sign up' , class: "btn btn-primary btn-lg btn-block" %>
+      <% end %>
+      <%= render "devise/shared/links" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</body>
