--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,8 @@
 	        </li>
 	        <li class="dropdown" style="display: table-cell;padding-right: 10px">
 	          <button type="button" class="btn btn-primary navbar-btn" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Payment <span class="caret"></span></button>
-		          <ul class="dropdown-menu multi-level">	
+		          <ul class="dropdown-menu multi-level">
+		         	  <li><a href="/payments/make"> Make Monthly Payment </a></li>	
 			          <li><a href="/payments"> Customer Search </a></li>
 			          <li><a href="/payments/zone"> Zonal payment </a></li>
 		          </ul>
