--- a/app/views/complaints/index.html.erb
+++ b/app/views/complaints/index.html.erb
@@ -1,18 +1,20 @@
 <h2> Complaints Log </h2><br>
 <table class="table table-striped table-bordered">
-	<tr>
-		<th>Id</th>
-		<th><%= sort_link(@q, :first_name, 'First Name', default_order: :desc) %></th>
+	<tr class="info">
+		<th></th>
+		<th><%= sort_link(@q, :customer_first_name, 'Customer', default_order: :desc) %></th>
 		<th><%= sort_link(@q, :employee_id, 'Employee', default_order: :desc) %></th>
 		<th><%= sort_link(@q, :issue, 'Issue', default_order: :desc) %></th>
 		<th><%= sort_link(@q, :status, 'Status', default_order: :desc) %></th>
 		<th><%= sort_link(@q, :updated_at, 'Updated At', default_order: :desc) %></th>
+		<th></th>
+		<th></th>
 	</tr>
 	<% @complaints.each_with_index do |complaint,index| %>
 		<tr>
 			<td><%= index + 1 %></td>
-			<td><%= complaint.customer.first_name  %></td>
-			<td><%= complaint.employee.name  %></td>
+			<td><%= complaint.customer.first_name.capitalize  %></td>
+			<td><%= complaint.employee.name.capitalize  %></td>
 			<td><%= complaint.issue %></td>
 			<td><%= complaint.status%></td>
 			<td><%= complaint.updated_at.strftime '%d-%m-%Y' %></td>
