--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -2,8 +2,7 @@
 	<h1>Customers</h1>
 	<div style="position: absolute; right: 0; top: 0; text-align: right; max-width: 50%; overflow: hidden">
 		<%= search_form_for @q do |f| %>
-			<%= f.label :search %>
- 			<%= f.search_field :first_name_or_last_name_or_customer_friendly_id_or_setup_box_number_cont %>
+ 			<%= f.search_field :first_name_or_last_name_or_customer_friendly_id_or_setup_box_number_cont,placeholder: "Search" %>
  			<%= f.submit %>
 		<% end %>
 	</div>
@@ -11,7 +10,7 @@
 <br>
 
 <table class="table table-striped table-bordered table-hover">
-	<tr class="table-danger">
+	<tr class="info">
 		<th></th>
 		<th><%= sort_link(@q, :customer_friendly_id, 'Customer Id', default_order: :desc) %></th>
 		<th><%= sort_link(@q, :first_name, 'First Name', default_order: :desc) %></th>
@@ -20,16 +19,23 @@
 		<th><%= sort_link(@q, :plan_id, 'Plan', default_order: :desc) %></th>
 		<th><%= sort_link(@q, :setup_box_number, 'Setup Box Number', default_order: :desc) %></th> 
 		<th><%= sort_link(@q, :created_at, 'Registered Date', default_order: :desc) %></th>
+		<th></th>
+		<th></th>
+		<th></th>
 	</tr>
 	<% @customers.each_with_index do |customer,index| %>
 		<tr>
 			<td><%= index +1 %></td>
 			<td><%= customer.customer_friendly_id %></td>
-			<td><%= customer.first_name %></td>
-			<td><%= customer.last_name %></td>
+			<td><%= customer.first_name.capitalize %></td>
+			<td><%= customer.last_name.capitalize %></td>
 			<td><%= customer.zone.name %></td>
 			<td><%= customer.plan.name%></td>
-			<td><%= customer.setup_box_number%></td>
+			<td>
+				<% customer.inventories.each do |c| %>
+					<%= c.inventory_friendly_id %> ,
+				<% end %>
+			</td>
 			<td><%= customer.created_at.strftime '%d-%m-%Y'	 %></td>
 			<td><%= link_to 'Show', customer %></td>
 			<td><%= link_to 'Edit', edit_customer_path(customer) %></td>
