--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,9 +1,11 @@
 <h1>Employees</h1><br>
 <table class="table table-striped table-bordered">
-	<tr>
+	<tr class="info">
 		<th></th>
 		<th>Name</th>
 		<th>Mobile No</th>
+		<th></th>
+		<th></th>
 	</tr>
 	<% @employees.each_with_index do |employee,index| %>
 		<tr>
