--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -1,23 +1,28 @@
 <h1>Inventory</h1><br>
 <table class="table table-striped table-bordered">
 	<tr>
-		<th>Id</th>
-		<th>Item</th>
-		<th>Description</th>
-		<th>Quantity</th>
+		<th></th>
+		<th><%= sort_link(@q, :inventory_friendly_id, 'Inventory Id', default_order: :desc) %></th>
+		<th><%= sort_link(@q, :status, 'Status', default_order: :desc) %></th>
+		<th><%= sort_link(@q, :customer_first_name, 'Customer', default_order: :desc) %></th>
 	</tr>
-	<% @inventory.each do |inventory| %>
+	<% @inventory.each_with_index do |inventory,index| %>
 		<tr>
-			<td><%= inventory.id %></td>
-			<td><%= inventory.item %></td>
-			<td><%= inventory.description %></td>
-			<td><%= inventory.quantity %></td>
+			<td><%= index+1 %></td>
+			<td><%= inventory.inventory_friendly_id %></td>
+			<td><%= inventory.status %></td>
+			<td>
+				<% if inventory.customer.present? %>
+					<%= inventory.customer.first_name.capitalize %>
+				<% else %>
+					<%= "----" %>
+				<% end %>	
+			</td>
 			<td><%= link_to 'Edit', edit_inventory_path(inventory) %></td>
 			<td><%= link_to 'Destroy', inventory ,method: :delete, data: {confirm: 'Are you sure'} %></td>
 		</tr>
 	<% end %>
 </table> 
-
 
 
 
