--- a/app/views/complaints/_form.html.erb
+++ b/app/views/complaints/_form.html.erb
@@ -1,5 +1,5 @@
 <%= bootstrap_form_for(@complaint,layout: :horizontal,:html => { :multipart => true },inline_errors: true )do |f| %>
-    <%= f.collection_select :customer_id, Customer.all, :id,:customer_friendly_id,:prompt => "Select customer "%>
+    <%= f.collection_select :customer_id, Customer.all.select(:id,:customer_friendly_id),:id,:customer_friendly_id,:prompt => "Select customer "%>
     <%= f.collection_select :employee_id, Employee.all, :id,:name,:prompt => "Select Assigning Employee "%>
     <% if @edit %>
    		<%= f.select(:status, ["Open","Closed"], { :prompt => "Status"}) %>  
@@ -7,6 +7,6 @@
    		<%= f.select(:status, ["Open","Closed"], { :prompt => "Status"}, { :disabled => true}) %>  
    	<% end %>
     <%= f.text_area :issue %>
-    <%= f.submit%>
+    <%= f.primary %>
     <p><p><br><br><br>
 <% end %>
