--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= bootstrap_form_for(@customer,layout: :horizontal,:html => { :multiple => true },inline_errors: true )do |f| %>
+<%= bootstrap_form_for(@customer,layout: :horizontal,:html => { :multiple => true,:size => 5 },inline_errors: true )do |f| %>
     <%= f.text_field :first_name %>
     <%= f.text_field :last_name %>
     <%= f.date_select :date_of_birth, { start_year: 100.years.ago.year, end_year: Date.today.year, default: Date.today} %>
@@ -9,8 +9,12 @@
     <%= f.file_field :photo %>
     <%= f.file_field :address_proof %>
     <%= f.file_field :setup_box_id %>
-    <%= f.collection_select :setup_box_number, Inventory.where(status: 'unassigned'), :id,:inventory_friendly_id,:prompt => "Select Inventory "%>
-    <%= f.collection_select :zone_id, Zone.all, :id,:name,:prompt => "Select zone "%>
+    <% if @edit %>
+        <%= f.select(:setup_box_number,@customer.inventories, { :prompt => "Status"}, { :disabled => true}) %>  
+    <% else %>
+        <%= f.collection_select(:setup_box_number, Inventory.where(:status => 'unassigned'),:id,:inventory_friendly_id,{},{multiple: true})%>
+    <% end %>
+    <%= f.collection_select(:zone_id, Zone.all, :id,:name,{:prompt => "Select zone "})%>
     <%= f.collection_select :plan_id, Plan.all, :id,:name, :prompt => "Select one Plan"%>
     <%= f.primary %>
     <p><p><br><br><br>
