--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -1,10 +1,12 @@
 <h1>Inventory</h1><br>
 <table class="table table-striped table-bordered">
-	<tr>
+	<tr class="info">
 		<th></th>
 		<th><%= sort_link(@q, :inventory_friendly_id, 'Inventory Id', default_order: :desc) %></th>
 		<th><%= sort_link(@q, :status, 'Status', default_order: :desc) %></th>
 		<th><%= sort_link(@q, :customer_first_name, 'Customer', default_order: :desc) %></th>
+		<th></th>
+		<th></th>
 	</tr>
 	<% @inventory.each_with_index do |inventory,index| %>
 		<tr>
