--- a/app/views/zones/index.html.erb
+++ b/app/views/zones/index.html.erb
@@ -1,13 +1,14 @@
 <h1>Zone</h1><br>
 <% if @zones %>
 	<table class="table table-striped table-bordered">
-		<tr>
+		<tr class="info">
 			<!-- <th>No</th> -->
 			<th></th>
 			<th>Zone</th>
 			<th>Engineer</th>
 			<th>Contact</th>
 			<th>Comments</th>
+			<th></th>
 		</tr>
 		<% @zones.each_with_index do |zone,index| %>
 			<tr>	
